--- a/scss/all.css
+++ b/scss/all.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -54,6 +61,37 @@ table {
 
 *, *::before, *::after {
   box-sizing: border-box;
-  font-size: 10px;
   margin: 0 auto;
+}
+
+body {
+  font-family: "Noto Sans TC", sans-serif;
+  font-size: 10px;
+  max-width: 1028px;
+  height: 100%;
+  margin: 0 auto;
+  background: linear-gradient(172.7deg, #FFD370 5.12%, #FFD370 53.33%, #FFD370 53.44%, #FFFFFF 53.45%, #FFFFFF 94.32%);
+}
+
+.header {
+  width: 100%;
+  justify-content: space-between;
+  padding: 1.6em;
+}
+.header nav {
+  font-size: 1.6em;
+}
+.header nav p {
+  font-weight: 700;
+  display: inline-block;
+  padding-right: 1.5em;
+}
+.header nav a {
+  font-size: 1rem;
+  text-decoration: none;
+  color: #333333;
+}
+.header nav a:hover {
+  transition: 0.2s;
+  font-weight: 700;
 }/*# sourceMappingURL=all.css.map */
