--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,3 +1,6 @@
 @import "variables.scss";
 @import "reset.scss";
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
+
 @import "main.scss";
