--- a/scss/all.css
+++ b/scss/all.css
@@ -105,7 +105,7 @@ body {
 }
 
 .main {
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
 }
 @media (max-width: 375px) {
@@ -118,6 +118,9 @@ body {
 .todo {
   font-size: 1.6em;
   position: relative;
+  padding-bottom: 1.6em;
+  width: 50%;
+  margin: 0 auto;
 }
 .todo .todo-text {
   width: 100%;
@@ -134,11 +137,30 @@ body {
 }
 @media (max-width: 375px) {
   .todo {
-    margin: 0 auto;
+    width: 100%;
   }
 }
 
+.todo-something {
+  width: 50%;
+  margin: auto;
+  font-size: 1.6em;
+  background-color: #fff;
+  border-radius: 0.8em;
+}
+
+.todo-status {
+  font-weight: 700;
+}
+.todo-status li {
+  text-align: center;
+  width: 33.3%;
+  padding: 1em;
+  border-bottom: 1px solid #333333;
+}
+
 .todo-nothing {
+  display: none;
   text-align: center;
 }
 .todo-nothing p {
@@ -148,4 +170,103 @@ body {
 }
 .todo-nothing img {
   width: 25em;
+}
+
+.login-page {
+  background: #FFD370;
+  color: #333333;
+  justify-content: space-evenly;
+}
+@media (max-width: 768px) {
+  .login-page {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+.login-header {
+  text-align: center;
+}
+.login-header h1 {
+  padding-bottom: 1em;
+}
+@media (max-width: 375px) {
+  .login-header h1 {
+    padding-bottom: 1.5em;
+  }
+}
+.login-header img {
+  width: 30em;
+}
+.login-header .main-img {
+  width: 38em;
+}
+@media (max-width: 768px) {
+  .login-header .main-img {
+    display: none;
+  }
+}
+
+.login-form h2 {
+  font-size: 2.4em;
+  font-weight: 700;
+  padding-bottom: 1.5em;
+}
+@media (max-width: 375px) {
+  .login-form h2 {
+    text-align: center;
+    font-size: 2em;
+  }
+}
+@media (max-width: 375px) {
+  .login-form {
+    width: 80%;
+  }
+}
+
+.login-info {
+  font-size: 1.4em;
+  font-weight: 700;
+}
+.login-info li {
+  padding-bottom: 2em;
+}
+.login-info p {
+  padding-bottom: 0.5em;
+}
+.login-info input {
+  width: 100%;
+  padding: 1em;
+  border-radius: 0.8em;
+  outline: none;
+  border: none;
+}
+
+.action-buttons {
+  text-align: center;
+}
+.action-buttons .login-btn {
+  font-size: 1em;
+  font-weight: 700;
+  width: 40%;
+  background-color: #333333;
+  color: #fff;
+  cursor: pointer;
+}
+.action-buttons .login-btn:hover {
+  background-color: #222;
+  font-weight: 900;
+  transition: 0.2s;
+}
+.action-buttons a {
+  text-decoration: none;
+  color: #333333;
+}
+.action-buttons a:hover {
+  font-weight: 900;
+  transition: 0.2s;
+}
+
+.error-message {
+  color: #D87355;
 }/*# sourceMappingURL=all.css.map */
