--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -46,7 +46,7 @@ body{
 }
 
 .main{
-    width: 50%;
+    width: 100%;
     margin: 0 auto;
     @include mobile{
             width: 100%;
@@ -57,6 +57,9 @@ body{
 .todo{
     font-size: 1.6em;
     position: relative;
+    padding-bottom: 1.6em;
+    width: 50%;
+    margin: 0 auto;
     .todo-text{
         width: 100%;
         text-align: left;
@@ -71,11 +74,37 @@ body{
         top: 0.3em;
     }
     @include mobile{
-        margin: 0 auto;
+        width: 100%;
     }
 }
 
+.todo-something{
+    width: 50%;
+    margin: auto;
+    font-size: 1.6em;
+    background-color: #fff;
+    border-radius: 0.8em;
+}
+
+.todo-status{
+    font-weight: 700;
+    li{
+        text-align: center;
+        width: 33.3%;
+        padding: 1em;
+        border-bottom: 1px solid $black;
+    }
+
+}
+
+
+
+
+
+
+
 .todo-nothing{
+    display: none;
     text-align: center;
     p{
         font-size: 1.6em;
